# generic-register-operation-optimizer

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: asciidoctor-ghpages.yml  unit_tests.yml
cmake/: groov.cmake
docs/: config.adoc  field_write_semantics.adoc  groups.adoc  index.adoc  intro.adoc  paths.adoc  read_write.adoc  synopsis.adoc  testing.adoc  write_functions.adoc
include/: groov.hpp
include/groov/: attach_value.hpp  boost_extra.hpp  concepts.hpp  config.hpp  groov.hpp  group.hpp  identifier.hpp  identity.hpp  make_spec.hpp  mmio_bus.hpp  object.hpp  path.hpp  read.hpp  read_spec.hpp  resolve.hpp  test.hpp  tree.hpp  value_path.hpp  write.hpp  write_spec.hpp
include/groov/detail/: type_traits.hpp
test/: CMakeLists.txt  config.cpp  conftest.py  group.cpp  identifier.cpp  identity.cpp  mmio_bus.cpp  mmio_bus_pbt.hpp  mmio_bus_pbt.py  object.cpp  path.cpp  read.cpp  read_spec.cpp  test.cpp  test_bus.cpp  tree.cpp  value_path.cpp  write.cpp  write_functions.cpp  write_spec.cpp
test/fail/: CMakeLists.txt  dummy_bus.hpp  group_duplicate_path.cpp  group_redundant_path.cpp  group_unresolvable_path.cpp  identifier_path_invalid.cpp  identifier_path_too_long.cpp  path_ambiguous.cpp  path_invalid.cpp  path_mismatch.cpp  path_too_long.cpp  read_ambiguous_multireg_path.cpp  read_ambiguous_path.cpp  read_invalid_multifield_path.cpp  read_invalid_multireg_path.cpp  read_invalid_path.cpp  read_only_field_without_identity.cpp  read_other_write_only_bits.cpp  read_write_only_field.cpp  sync_read_nontrivial.cpp  sync_write_nontrivial.cpp  sync_write_nontrivial_nodiscard.cpp  write_only_field_with_identity.cpp  write_read_only_field.cpp  write_reg_partial_read_only.cpp  write_some_read_only_bits.cpp  write_some_write_only_bits.cpp  write_some_write_only_fields.cpp  write_spec_literal_index.cpp
test/fail/read/: CMakeLists.txt  read_from_wo_bits_indirect.cpp  read_from_wo_field_direct.cpp  read_from_wo_field_indirect_by_field.cpp  read_from_wo_field_indirect_by_register.cpp  read_from_wo_register_direct.cpp  read_multi_conversion.cpp
test/fail/write/: CMakeLists.txt  incur_rmw_on_wo_bits.cpp  incur_rmw_on_wo_field.cpp  write_to_ro_field_direct.cpp  write_to_ro_register_direct.cpp
test/tools/: CMakeLists.txt  test_regs.py
tools/: CMakeLists.txt  groov.py  parse_svd.py  regs2groov.py
usage_test/: CMakeLists.txt  main.cpp
