[project]
name = "intel-generic-register-operation-optimizer"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "intel-cicd-repo-infrastructure"
]
license = "BSL-1.0"

[project.urls]
Repository = "https://github.com/intel/generic-register-operation-optimizer/"
Documentation = "https://intel.github.io/generic-register-operation-optimizer/"

[tool.setuptools]
packages = []

[tool.uv.sources]
intel-cicd-repo-infrastructure = { git = "https://github.com/intel/cicd-repo-infrastructure", branch = "dev" }
